// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ZaakStatus > No query params passed 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _TextPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d"
    >
      <div
        class="_HeadingInner_3b337d"
      >
        <h2
          class="ams-heading ams-heading--1"
        >
          Status van uw aanvraag
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/"
        >
          Ga naar het dashboard
        </a>
      </p>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ZaakStatus > should show error alert 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _TextPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d"
    >
      <div
        class="_HeadingInner_3b337d"
      >
        <h2
          class="ams-heading ams-heading--1"
        >
          Status van uw aanvraag
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <section
        class="ams-alert ams-alert--error ams-mb--xs"
      >
        <div
          class="ams-alert__icon"
        >
          <span
            class="ams-icon ams-icon--size-4"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M33.63 30.9H2.37L18 3zm-24.44-4h17.62L18 11.19z"
              />
              <path
                d="M17 16.99h2v4.95h-2zm0 5.95h2v1.95h-2z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ams-alert__content"
        >
          <h2
            class="ams-heading ams-heading--4"
          >
            Foutmelding
          </h2>
          <p
            class="ams-paragraph"
          >
            Wij kunnen nu niet alle gegevens tonen, probeer het later nog eens.
          </p>
        </div>
      </section>
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/"
        >
          Ga naar het dashboard
        </a>
      </p>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ZaakStatus > should show not found message 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _TextPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d"
    >
      <div
        class="_HeadingInner_3b337d"
      >
        <h2
          class="ams-heading ams-heading--1"
        >
          Status van uw aanvraag
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p
        class="ams-paragraph ams-mb--xs"
      >
        Wij kunnen de status van uw aanvraag niet laten zien.
      </p>
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/vergunningen"
        >
          Bekijk het overzicht
        </a>
      </p>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ZaakStatus > should show wachten op betaling 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _TextPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d"
    >
      <div
        class="_HeadingInner_3b337d"
      >
        <h2
          class="ams-heading ams-heading--1"
        >
          Status van uw aanvraag
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p
        class="ams-paragraph ams-mb--xs"
      >
        Wij kunnen de status van uw aanvraag niet laten zien.
      </p>
      <p
        class="ams-paragraph ams-mb--xs"
      >
        U heeft betaald voor deze aanvraag. Het kan even duren voordat uw aanvraag op Mijn Amsterdam te zien is.
      </p>
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/vergunningen"
        >
          Bekijk het overzicht
        </a>
      </p>
    </div>
  </main>
</DocumentFragment>
`;
